Moved to props factory, edge-level personalization

--- a/src/sxastarter/.env
+++ b/src/sxastarter/.env
@@ -35,6 +35,7 @@ SITECORE_API_HOST=
 # For Sitecore XM, this is typically optional. By default, the endpoint is calculated using
 # the resolved Sitecore API hostname + the `graphQLEndpointPath` defined in your `package.json`.
 GRAPH_QL_ENDPOINT=http://cm/sitecore/api/graph/edge
+EDGE_QL_ENDPOINT=https://xmcloudcm.localhost/sitecore/api/graph/edge
 
 # Your default app language.
 DEFAULT_LANGUAGE=
