--- a/src/sxastarter/.eslintrc
+++ b/src/sxastarter/.eslintrc
@@ -15,11 +15,13 @@
   ],
   "ignorePatterns": [".generated/**/*", "**/*.d.ts", "**/*.js"],
   "rules": {
-    "@next/next/no-img-element": "off", // Don't force next/image
-    "jsx-a11y/alt-text": ["warn", { "elements": ["img"] }], // Don't force alt for <Image/> (sourced from Sitecore media)
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
-    "jsx-quotes": ["error", "prefer-double"]
+      "react/no-unescaped-entities": "off",
+      "@next/next/no-page-custom-font": "off",
+      "@next/next/no-img-element": "off", // Don't force next/image
+    //"jsx-a11y/alt-text": ["warn", { "elements": ["img"] }], // Don't force alt for <Image/> (sourced from Sitecore media)
+      "no-unused-vars": "off",
+    //"@typescript-eslint/no-unused-vars": "error",
+    //"@typescript-eslint/no-explicit-any": "error",
+    //"jsx-quotes": ["error", "prefer-double"]
   }
 }
