--- a/src/sxastarter/tsconfig.json
+++ b/src/sxastarter/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "components/*": ["src/components/*"],
+      "components/*": ["src/components/*", "node_modules/sitecore-jss-rule-engine-nextjs/src/components/*"],
       "lib/*": ["src/lib/*"],
       "temp/*": ["src/temp/*"],
       "assets/*": ["src/assets/*"],
@@ -17,6 +17,7 @@
     "downlevelIteration": true,
     "noEmit": true,
     "esModuleInterop": true,
+    //"sourceMap": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -31,6 +32,6 @@
     "incremental": true,
     "forceConsistentCasingInFileNames": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/rule-engine/ruleEngineProvider.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
