--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -42,14 +42,15 @@
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
     "graphql-tag": "^2.12.6",
+    "memory-cache": "^0.2.0",
     "next": "^13.1.6",
     "next-localization": "^0.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.52.3",
     "sass-alias": "^1.0.5",
-    "sitecore-jss-rule-engine": "^0.0.19",
-    "sitecore-jss-rule-engine-nextjs": "^0.0.33"
+    "sitecore-jss-rule-engine": "^0.0.33",
+    "sitecore-jss-rule-engine-nextjs": "^0.0.53"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.8",
@@ -62,6 +63,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@sitecore-jss/sitecore-jss-cli": "~21.2.0",
     "@sitecore-jss/sitecore-jss-dev-tools": "~21.2.0",
+    "@types/memory-cache": "^0.2.3",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
