--- a/src/sxastarter/tsconfig.json
+++ b/src/sxastarter/tsconfig.json
@@ -17,7 +17,7 @@
     "downlevelIteration": true,
     "noEmit": true,
     "esModuleInterop": true,
-    //"sourceMap": true,
+    "sourceMap": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -32,6 +32,6 @@
     "incremental": true,
     "forceConsistentCasingInFileNames": false
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/lib/middleware/plugins/scpersonalize.tsexclude", "src/lib/middleware/plugins/scpersonalize.ts", "src/lib/middleware/plugins/scpersonalize.ts", "src/lib/middleware/plugins/scpersonalize.ts"],
   "exclude": ["node_modules"]
 }
