--- a/src/sxastarter/package.json
+++ b/src/sxastarter/package.json
@@ -3,6 +3,9 @@
   "description": "Application utilizing Sitecore JavaScript Services and Next.js",
   "version": "21.2.0",
   "private": true,
+  "workspaces": [
+    "../packages/*"
+  ],
   "config": {
     "appName": "sxastarter",
     "rootPlaceholders": [
@@ -49,8 +52,8 @@
     "react-dom": "^18.2.0",
     "sass": "^1.52.3",
     "sass-alias": "^1.0.5",
-    "sitecore-jss-rule-engine": "^0.0.43",
-    "sitecore-jss-rule-engine-nextjs": "^0.0.70"
+    "sitecore-jss-rule-engine": "*",
+    "sitecore-jss-rule-engine-nextjs": "*"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.8",
