Fix middleware running errors

--- a/apps/demo/.env
+++ b/apps/demo/.env
@@ -11,7 +11,7 @@
 # See https://jss.sitecore.com/docs/fundamentals/services/view-engine
 # If undefined, http://localhost:3000 is used by default.
 # In production non-editing environments it is desirable to use relative URLs, so this may be set to empty string.
-#PUBLIC_URL=
+PUBLIC_URL=http://localhost:3000
 
 # To secure the Sitecore editor endpoint exposed by your Next.js app
 # (`/api/editing/render` by default), a secret token is used. This (client-side)
@@ -26,7 +26,7 @@ JSS_EDITING_SECRET=
 # when building locally (if you've never run `jss setup`), or when building in a
 # higher environment (since `scjssconfig.json` is ignored from source control).
 # In this case, use this environment variable to provide the value at build time.
-SITECORE_API_KEY=
+SITECORE_API_KEY={DDEBF001-DC3E-4B8D-8867-E36A4165B193}
 
 # Your Sitecore API hostname is needed to build the app. Typically, the API host is
 # defined in `scjssconfig.json` (as `sitecore.layoutServiceHost`). This file may
@@ -38,7 +38,8 @@ SITECORE_API_HOST=
 # Your GraphQL Edge endpoint. This is required for Sitecore Experience Edge.
 # For Sitecore XM, this is typically optional. By default, the endpoint is calculated using
 # the resolved Sitecore API hostname + the `graphQLEndpointPath` defined in your `package.json`.
-GRAPH_QL_ENDPOINT=
+GRAPH_QL_ENDPOINT=https://xmcloudcm.localhost/sitecore/api/graph/edge
+EDGE_QL_ENDPOINT=https://xmcloudcm.localhost/sitecore/api/graph/edge
 
 # ==============================================
 
@@ -53,6 +54,7 @@ DEFAULT_LANGUAGE=
 # How many times should GraphQL Layout, Dictionary and ErrorPages services retry a fetch when endpoint rate limit is reached
 # You can disable it for all the services by configuring it to 0.
 GRAPH_QL_SERVICE_RETRIES=3
+NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # The way in which layout and dictionary data is fetched from Sitecore
 FETCH_WITH=GraphQL
