--- a/packages/sitecore-jss-rule-engine-edge/tsconfig.json
+++ b/packages/sitecore-jss-rule-engine-edge/tsconfig.json
@@ -1,17 +1,13 @@
 {
-  "compilerOptions": {
+  "compilerOptions": {    
     "paths": {
       "@jss-rule-engine/core": [
         "../sitecore-jss-rule-engine/*",
       ],
-      "react": [
-        "../../node_modules/@types/react"
-      ],
-      "react-dom": [
-        "../../node_modules/@types/react-dom"
-      ]
+      "react": ["../../node_modules/@types/react"],
+      "react-dom": ["../../node_modules/@types/react-dom"]
     },
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true,    
     "outDir": "dist",
     "module": "es6",
     "target": "es5",
@@ -37,7 +33,8 @@
   },
   "include": [
     "src",
-    "./src/index.ts"
+    "./src/lib/personalizationUtils.ts",
+    "../sitecore-jss-rule-engine-nextjs/src/queries/getItemById.ts"
   ],
   "exclude": [
     "node_modules"
