--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@sitecore-cloudsdk/events": "^0.3.1",
     "@sitecore-cloudsdk/personalize": "^0.3.1",
-    "@sitecore-feaas/clientside": "^0.5.17",
+    "@sitecore-feaa/clientside": "^0.5.17",
     "@sitecore-jss/sitecore-jss-nextjs": "~22.1.3",
     "@sitecore/components": "^1.1.10",
     "graphql": "~15.8.0",
@@ -42,7 +42,8 @@
     "react-dom": "^18.2.0",
     "sharp": "0.32.6",
     "@jss-rule-engine/core": "*",
-    "@jss-rule-engine/nextjs": "*"
+    "@jss-rule-engine/nextjs": "*",
+    "@jss-rule-engine/edge": "*"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
