--- a/packages/sitecore-jss-rule-engine-nextjs/package.json
+++ b/packages/sitecore-jss-rule-engine-nextjs/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@jss-rule-engine/nextjs",
-  "version": "0.2.1",
+  "version": "0.3.1",
   "description": "",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "types": "dist/index.d.ts",  
+  "types": "dist/index.d.ts",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
@@ -17,11 +17,11 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "build:babel": "babel src/lib --out-dir dist --copy-files",
-    "release": "npm run build && npm version --patch && npm publish"
+    "release": "npm run build && npm version patch && npm publish"
   },
   "engines": {
-      "node": ">=12",
-      "npm": ">=6"
+    "node": ">=12",
+    "npm": ">=6"
   },
   "keywords": [
     "Sitecore",
@@ -41,7 +41,7 @@
     "react-dom": "^18.2.0",
     "@jss-rule-engine/core": "*",
     "@jss-rule-engine/edge": "*"
-  },  
+  },
   "devDependencies": {
     "@sitecore-jss/sitecore-jss-cli": "21.2.0",
     "@sitecore-jss/sitecore-jss-dev-tools": "21.2.0",
@@ -49,5 +49,5 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.0.5",
     "@types/memory-cache": "0.2.5"
-  }  
+  }
 }
