Move image to env file

--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ SQL_DATABASE_PREFIX=Sitecore
 
 # Other supporting images, including Sitecore modules and Docker tools
 TOOLS_IMAGE=scr.sitecore.com/tools/sitecore-docker-tools-assets:10.2.0-1809
+RULEENGINE_IMAGE=ghcr.io/jackthehack/ruleengine-cm-assets
 TRAEFIK_IMAGE=traefik:v2.5.3-windowsservercore-1809
 
 # Windows and Node.js version for JSS
