--- a/.env
+++ b/.env
@@ -71,7 +71,7 @@ AZUREBLOB_CONTAINER=
 EXPEDGE_CONNECTION=
 LOG_LEVEL_VALUE=INFO
 
-HOST_LICENSE_FOLDER=C:\license\foodstuffs10
+HOST_LICENSE_FOLDER=C:\license
 NODEJS_VERSION=20.0.0
 VERSION=1.0.2
 JSS_DEPLOYMENT_SECRET_xmcloudpreview=
